<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/coffee_espresso_cappuccino_cup_foam_112571_1080x1920"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#3E2723"
        android:hint="@string/name"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/Whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#3E2723"
        android:text="@string/whippedcream"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/Choclate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Whipped_cream"
        android:layout_marginStart="20dp"
        android:backgroundTint="#3E2723"
        android:text="@string/choclate"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Choclate"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/Qunatity"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:alpha="0.25"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:alpha="0.25"
            android:onClick="increment"
            android:text="+" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlay"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/summary"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="₹0"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.25"
        android:onClick="submitOrder"
        android:text="Order"
        android:textAllCaps="true" />
</RelativeLayout>